<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_donate"
        android:icon="@drawable/ic_action_beer"
        android:title="@string/menu_donate"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_reload"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/menu_reload" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_info"
        android:title="@string/menu_about" />
</menu>